--- a/chimera-phase2/Makefile
+++ b/chimera-phase2/Makefile
@@ -1,5 +1,5 @@
 #
-# Buttercup compiler - Project make file: 
+# Chimera compiler - Project make file: 
 # Copyright (C) 2013 Ariel Ortiz, ITESM CEM
 #  
 # This program is free software: you can redistribute it and/or modify
@@ -16,10 +16,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-buttercup.exe: Driver.cs Scanner.cs Token.cs TokenCategory.cs Parser.cs \
-	SyntaxError.cs
-	mcs -out:buttercup.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs \
-	Parser.cs SyntaxError.cs
+chimera.exe: Driver.cs Scanner.cs Token.cs TokenCategory.cs               
+	mcs -out:chimera.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs
 			
 clean:
-	rm buttercup.exe
+	rm chimera.exe
