--- a/chimera-phase3/Makefile
+++ b/chimera-phase3/Makefile
@@ -17,7 +17,7 @@
 #
 
 chimera.exe: Driver.cs Scanner.cs Token.cs TokenCategory.cs               
-	mcs -out:chimera.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs Parser.cs SyntaxError.cs
+	mcs -out:chimera.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs Parser.cs SyntaxError.cs Node.cs SpecificNodes.cs
 			
 clean:
 	rm chimera.exe
