--- a/chimera-phase5/Makefile
+++ b/chimera-phase5/Makefile
@@ -17,7 +17,7 @@
 #
 
 chimera.exe: Driver.cs Scanner.cs Token.cs TokenCategory.cs               
-	mcs -out:chimera.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs Parser.cs SyntaxError.cs Node.cs SpecificNodes.cs SemanticAnalyzer.cs Type.cs SemanticError.cs SymbolTable.cs FunctionTable.cs
+	mcs -out:chimera.exe Driver.cs Scanner.cs Token.cs TokenCategory.cs Parser.cs SyntaxError.cs Node.cs SpecificNodes.cs SemanticAnalyzer.cs Type.cs SemanticError.cs SymbolTable.cs FunctionTable.cs CLIGenerator.cs
 			
 clean:
 	rm chimera.exe
